# tesseract_practice_conan

./: CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  main.cc
